--- a/package.json
+++ b/package.json
@@ -35,6 +35,6 @@
     "vite": "^6.0.1"
   },
   "lint-staged": {
-    "*.{js,jsx,ts,tsx,json,css,scss,md}": "prettier --write"
+    "*.{js,jsx,ts,tsx}": "prettier --write"
   }
 }
