--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "prepare": "husky && husky install"
   },
   "dependencies": {
+    "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
